// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoPrivErc20Vault deposit can be called by whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 84571,
}
`;

exports[`GnoPrivErc20Vault mint osToken can mint from not whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 174074,
}
`;

exports[`GnoPrivErc20Vault transfer can transfer to whitelisted user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 59071,
}
`;
